# rust-web-api-clean-architecture

./: Cargo.toml  Dockerfile  docker-compose.ci.yml  docker-compose.yml
.github/workflows/: clippy.yml  docker-build-test.yml  fmt-check.yml  test.yml
db/: 1_db.sql  2_table.sql
src/api/src/: di.rs  lib.rs  user_find.rs
src/application/: Cargo.toml
src/application/src/: lib.rs  repository.rs  user_find.rs
src/domain/: Cargo.toml
src/domain/src/: user.rs
src/repository/: Cargo.toml
src/repository/src/: lib.rs  mock_user.rs  user.rs
src/usecase/src/: lib.rs  user_find.rs
