[package]
name = "rust-clean-architecture-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
api = { path = "./src/api" }

[workspace]
members = [
  "./src/api",
  "./src/domain",
  "./src/usecase",
  "./src/application",
  "./src/repository",
]

[[bin]]
name = "main"
path = "src/bin/main.rs"
